--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <span class="heading-primary-main">Outdoor</span>
                     <span class="heading-primary-sub">is where life happens</span>
                 </h1>
-                <a href="#" class="btn btn-white">Discover our tour</a>
+                <a href="#" class="btn btn-white btn-animated">Discover our tour</a>
             </div>
         </header>
     </body>
