--- a/index.html
+++ b/index.html
@@ -25,5 +25,100 @@
                 <a href="#" class="btn btn--white btn--animated">Discover our tour</a>
             </div>
         </header>
+
+        <main>
+            <section class="section-about">
+                <div class="u-center-text u-margin-bottom">
+                <h2 class="heading-secondary">
+                    Exciting tour for adventurous people
+                </h2>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                           You're going to fall in love with nature.
+                        </h3>
+                        <p class="paragraph">
+                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dignissimos distinctio eligendi rerum suscipit? Accusamus aperiam assumenda dignissimos laboriosam, molestias nam nihil placeat quam quas similique sit, soluta vero voluptates.
+                        </p>
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            You're going to fall in love with nature.
+                        </h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dignissimos distinctio eligendi rerum suscipit? Accusamus aperiam assumenda dignissimos laboriosam, molestias nam nihil placeat quam quas similique sit, soluta vero voluptates.
+                        </p>
+                        <a href="#" class="btn-text">Learn More &rarr;</a>
+                    </div>
+                    <div class="col-1-of-2">
+                        Image Composition
+                    </div>
+                </div>
+            </section>
+        </main>
+
+        <!--
+        <section class="grid">
+            <div class="row">
+                <div class="col-1-of-2">
+                    col-1-of-2
+                </div>
+                <div class="col-1-of-2">
+                    col-1-of-2
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-3">
+                    col-1-of-3
+                </div>
+                <div class="col-1-of-3">
+                    col-1-of-3
+                </div>
+                <div class="col-1-of-3">
+                    col-1-of-3
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-3">
+                    col-1-of-3
+                </div>
+                <div class="col-2-of-3">
+                    col-2-of-3
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-4">
+                    col-1-of-4
+                </div>
+                <div class="col-1-of-4">
+                    col-1-of-4
+                </div>
+                <div class="col-1-of-4">
+                    col-1-of-4
+                </div>
+                <div class="col-1-of-4">
+                    col-1-of-4
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-4">
+                    col-1-of-4
+                </div>
+                <div class="col-1-of-4">
+                    col-1-of-4
+                </div>
+                <div class="col-2-of-4">
+                    col-2-of-4
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-4">
+                    col-1-of-4
+                </div>
+                <div class="col-3-of-4">
+                    col-3-of-4
+                </div>
+            </div>
+        </section>
+        -->
     </body>
 </html>
