--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
                         <a href="#" class="btn-text">Learn More &rarr;</a>
                     </div>
                     <div class="col-1-of-2">
-                        Image Composition
+                        <div class="composition">
+                            <img src="img/nat-1-large.jpg" alt="Photo_1" class="composition__photo composition__photo--p1">
+                            <img src="img/nat-2-large.jpg" alt="Photo_2" class="composition__photo composition__photo--p2">
+                            <img src="img/nat-3-large.jpg" alt="Photo_3" class="composition__photo composition__photo--p3">
+                        </div>
                     </div>
                 </div>
             </section>
