--- a/index.html
+++ b/index.html
@@ -58,6 +58,50 @@
                     </div>
                 </div>
             </section>
+
+            <section class="section-features">
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="features-box">
+                            <i class="features-box__icon icon-basic-world"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                            <p class="features-box__text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dignissimos distinctio eligendi rerum suscipit?
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="features-box">
+                            <i class="features-box__icon icon-basic-compass"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Meet Nature</h3>
+                            <p class="features-box__text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dignissimos distinctio eligendi rerum suscipit?
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="features-box">
+                            <i class="features-box__icon icon-basic-map"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Find the Way</h3>
+                            <p class="features-box__text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dignissimos distinctio eligendi rerum suscipit?
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="features-box">
+                            <i class="features-box__icon icon-basic-heart"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
+                            <p class="features-box__text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dignissimos distinctio eligendi rerum suscipit?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <!--
