--- a/index.html
+++ b/index.html
@@ -207,6 +207,54 @@
                     <a href="#" class="btn btn--green">Discover all tours</a>
                 </div>
             </section>
+
+            <section class="section-stories">
+                <div class="bg-video">
+                    <video class="bg-video__content" autoplay muted loop>
+                        <source src="img/video.mp4" type="video/mp4">
+                        <source src="img/video.webm" type="video/webm">
+                         Your browser is't supported!
+                    </video>
+                </div>
+                <div class="u-center-text u-margin-bottom">
+                    <h2 class="heading-secondary">
+                        We make people genuinely happy
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                             <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                             <figcaption class="story__caption">Mary Smith</figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+                            <p class="features-box__text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dignissimos distinctio eligendi rerum suscipit Ab dignissimos distinctio eligendi rerum suscipit Ab dignissimos distinctio eligendi rerum suscipit?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+                            <figcaption class="story__caption">Jack Wilson</figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+                            <p class="features-box__text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dignissimos distinctio eligendi rerum suscipit Ab dignissimos distinctio eligendi rerum suscipit Ab dignissimos distinctio eligendi rerum suscipit?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="u-center-text u-margin-huge">
+                    <a href="#" class="btn-text">Read More &rarr;</a>
+                </div>
+            </section>
         </main>
 
         <!--
