--- a/index.html
+++ b/index.html
@@ -303,7 +303,29 @@
                 </div>
             </section>
         </main>
-
+        <footer class="footer">
+            <div class="footer__logo-box">
+                <img src="img/logo-green-2x.png" alt="full logo" class="footer__logo">
+            </div>
+            <div class="row">
+                <div class="col-1-of-2">
+                    <div class="footer__navigation">
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Contact_Us</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Policy</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-1-of-2">
+                    <p class="footer__copyright">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dignissimos distinctio eligendi rerum suscipit Ab dignissimos distinctio eligendi rerum suscipit Ab dignissimos distinctio eligendi rerum suscipit.
+                    </p>
+                </div>
+            </div>
+        </footer>
         <!--
         <section class="grid">
             <div class="row">
