complete & only responsive part left

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <span class="heading-primary--main">Outdoor</span>
                     <span class="heading-primary--sub">is where life happens</span>
                 </h1>
-                <a href="#" class="btn btn--white btn--animated">Discover our tour</a>
+                <a href="#section-tour" class="btn btn--white btn--animated">Discover our tour</a>
             </div>
         </header>
 
@@ -121,7 +121,7 @@
                 </div>
             </section>
 
-            <section class="section-tour">
+            <section class="section-tour" id="section-tour">
                 <div class="u-center-text u-margin-bottom">
                     <h2 class="heading-secondary">
                         Most popular tours
@@ -153,7 +153,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$279</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book Now</a>
+                                    <a href="#popup" class="btn btn--white">Book Now</a>
                                 </div>
                             </div>
                         </div>
@@ -184,7 +184,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$479</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book Now</a>
+                                    <a href="#popup" class="btn btn--white">Book Now</a>
                                 </div>
                             </div>
                         </div>
@@ -215,7 +215,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$879</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book Now</a>
+                                    <a href="#popup" class="btn btn--white">Book Now</a>
                                 </div>
                             </div>
                         </div>
@@ -344,6 +344,28 @@
                 </div>
             </div>
         </footer>
+
+        <div class="popup" id="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="Tour" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="Tour" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <a href="#section-tour" class="popup__close">&times;</a>
+                    <h2 class="heading-secondary u-margin-bottom-medium">
+                        Start booking now
+                    </h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        Important &ndash; please read these terms before booking
+                    </h3>
+                    <p class="popup__text">
+                        This is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using. 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.
+                    </p>
+                    <a href="#" class="btn btn--green">Book now</a>
+                </div>
+            </div>
+        </div>
         <!--
         <section class="grid">
             <div class="row">
